projects/api-java/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  labels:
    app: api-java
  name: api-java
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-java
  type: ClusterIP
