projects/api-java/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-java
  namespace: default
spec:
  rules:
  - host: api-java.tozzi.fan
    http:
      paths:
      - backend:
          serviceName: api-java
          servicePort: 8080
